@@ -102,6 +102,8 @@ Features
 
  * Efficient transport of product build results from worker to backend.
 
+ * aarch64 architecture added (aka armv8 or arm64)
+
 Deprecated:
 ===========
 
